# dotfiles

./: .gitignore  .sops.yaml  AGENTS.md  README.md  build.sh  dc_charger.py  flake.nix  pyproject.toml  shell.nix  treefmt.toml
.agent/workflows/: format_code.md
.github/workflows/: build_bob.yml  build_jeeves.yml  build_muninn.yml  build_rhapsody-in-green.yml  build_systems copy.yml  build_systems.yml  fix_eval_warnings.yml  jeeves-build.yml  kernel_packages_update.sh  kernel_packages_update.yml  merge_flake_lock_update.yml  pytest.yml  pytest_safe.yml  treefmt.yml  update-flake-lock.yml
common/global/: default.nix  fonts.nix  libs.nix  locale.nix  nix.nix  programs.nix  safe_reboot.nix  snapshot_config.toml  snapshot_manager.nix  ssh.nix
common/optional/: brain_substituter.nix  desktop.nix  desktop_kernel.nix  docker.nix  libvirt.nix  monitoring-agent.nix  nvidia.nix  pipewire.nix  printing.nix  ssh_decrypt.nix  steam.nix  syncthing_base.nix  tmmworkshop_cache.nix  update.nix  zerotier.nix
docs/: CNAME  Gemfile  _config.yml  _congig.yml  cool_tools.md  index.md
docs/_posts/: 2025-10-31-MONOREPO.md
esphome/: .gitignore  batteries.yml  battery0.yml  battery1.yml  environment.yml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
overlays/: default.nix
python/: __init__.py  alembic.ini  common.py  database.py  database_cli.py  default.nix  parallelize.py
python/alembic/: env.py  script.py.mako
python/api/: __init__.py  contact_api.py  dependencies.py  main.py  middleware.py
python/data_science/: __init__.py  bluesky_ids.py  bluesky_transform.py  firehose_consumer.py  firehose_producer.py  ingest_congress.py  ingest_posts.py
python/eval_warnings/: __init__.py  main.py
python/heater/: __init__.py  controller.py  main.py  models.py
python/installer/: __init__.py  __main__.py  tui.py
python/orm/: __init__.py  base.py  common.py  contact.py  temp.py
python/prompt_bench/: Dockerfile.finetune  batch_bill_summarizer.py  bill_token_compression.py  compresion_test.py  container.py  downloader.py  finetune.py  finetune_container.py  main.py  models.py  summarization_prompts.py  train.sh  vllm_client.py  vllm_container.py
python/random/: capasitor.py  thing.py  voltage_drop.py
python/sheet_music_ocr/: __init__.py  audiveris.py  main.py  review.py
python/signal_bot/: __init__.py  device_registry.py  llm_client.py  main.py  models.py  signal_client.py
python/splendor/: .gitignore  base.py  bot.py  human.py  main.py  public_state.py  sim.py  simulat.py
python/stuff/: capasitor.py
python/system_tests/: __init__.py  components.py  validate_system.py
python/tools/: fix_eval_warnings.py  repo_line_counter.py  safe_reboot.py  snapshot_manager.py
python/van_inventory/: __init__.py  dependencies.py  main.py
python/van_weather/: __init__.py  main.py  models.py
python/zfs/: __init__.py  dataset.py  zpool.py
systems/bob/: llms.nix  (+6 more)
tests/: conftest.py  test_api.py  test_api_integration.py  test_api_main_extended.py  test_api_serve.py  test_common.py  test_components.py  test_databasse.py  test_eval_warnings.py  test_eval_warnings_extended.py  test_eval_warnings_main_fn.py  test_fix_eval_warnings.py  test_heater.py  test_heater_main.py  test_heater_main_extended.py  test_heater_serve.py  test_installer.py  test_installer_extended.py  test_installer_main_extended.py  test_installer_main_more.py  test_installer_tui_extended.py  test_installer_tui_more.py  test_orm.py  test_parallelize.py  test_safe_reboot.py  test_server_validate_scripts.py  test_sheet_music_ocr.py  test_signal_bot.py  test_snapshot_manager.py  test_splendor.py  test_splendor_base_extra.py  test_splendor_bot3_4.py  test_splendor_bot_extended.py  test_splendor_human.py  test_splendor_human_commands.py  test_splendor_human_tui.py  test_splendor_human_widgets.py  test_splendor_main.py  test_splendor_simulat.py  test_stuff.py  (+7 more)
tools/: installer.py  intaller.py  line_counter.py
users/: default.nix  secrets.yaml
(+290 files in other folders)
